[package]
name = "ben"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
lazy_static = "1.4.0"
nvml-wrapper = "^0.7.0"
nvml-wrapper-sys = "^0.5.0"
structopt = "0.3.26"
sysinfo = "0.23.13"
tokio = { version = "1.18.2", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter", "json"] }
tracing-tree = "0.2.1"
